finished up the sort by, now it shows the top 3 tags for the current gifts being browsed. fixed the bug where the gift cards didn't align properly.

--- a/client/stylesheets/components/gift.less
+++ b/client/stylesheets/components/gift.less
@@ -77,7 +77,7 @@ div.card{
   label.gift-description {
     color: @gift-supportive-text-color;
   }
-  
+
   i.add-wishlist {
     line-height: normal;
   }
@@ -168,7 +168,7 @@ div.gift-card {
     display: block;
   }
   @media (min-width: @screen-md-min) {
-    display: inline-flex;
+    display: inline-block;
     width: 31%;
     margin-left: 1%;
     margin-right: 1%;
